--- a/SBBurkhardt_GUI/SBBurkhardt_GUI.csproj
+++ b/SBBurkhardt_GUI/SBBurkhardt_GUI.csproj
@@ -66,6 +66,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="View\BoardViewModel.cs" />
+    <Compile Include="View\ConnectionViewModel.cs" />
     <Compile Include="View\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
