Final build before release.
Small fixes to be done.

--- a/SBBurkhardt_GUI/SBBurkhardt_GUI.csproj
+++ b/SBBurkhardt_GUI/SBBurkhardt_GUI.csproj
@@ -69,13 +69,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Common\Tools.cs" />
     <Compile Include="SearchComboBox.xaml.cs">
       <DependentUpon>SearchComboBox.xaml</DependentUpon>
     </Compile>
-    <Page Include="TimeControl.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="View\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -83,9 +80,6 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="TimeControl.xaml.cs">
-      <DependentUpon>TimeControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\BoardViewModel.cs" />
     <Compile Include="View\ConnectionViewModel.cs" />
